testdata/baselines/reference/compiler/superCallInJSWithWrongBaseTypeArgumentCount1(strict=true).errors.txt
b.js(3,25): error TS8026: Expected A<T> type arguments; provide these with an '@extends' tag.
b.js(15,25): error TS8026: Expected A<T> type arguments; provide these with an '@extends' tag.


==== a.ts (0 errors) ====
    export class A<T> {}
    
==== b.js (2 errors) ====
    import { A } from './a.js';
    
    export class B1 extends A {
                            ~
!!! error TS8026: Expected A<T> type arguments; provide these with an '@extends' tag.
        constructor() {
            super();
        }
    }
    
    export class B2 extends A<string> {
        constructor() {
            super();
        }
    }
    
    export class B3 extends A<string, string> {
                            ~~~~~~~~~~~~~~~~~
!!! error TS8026: Expected A<T> type arguments; provide these with an '@extends' tag.
        constructor() {
            super();
        }
    }